fixed mobile spacing issue

--- a/style.sass
+++ b/style.sass
@@ -2,7 +2,7 @@
 /* ----- Basic Setup -----
 /* ---------------------------------------
 * 
-  border: 10px solid red !important
+  border: 10px solid green !important
   display: none !important
 
 @font-face
@@ -389,6 +389,10 @@ body:not(.user-is-tabbing)
 @media (max-width: 900px)
   .work__box
     padding: 5rem
+  .work__links
+    margin-bottom: 40px !important
+    padding-bottom: 50px 
+    display: none !important
 
 @media (min-width: 900px) and (max-width: 1280px)
   .work__box
